--- a/project/index.html
+++ b/project/index.html
@@ -636,7 +636,7 @@
             <div class="container">
                 <div class="row">
                   <div class="img-fluid col-md-3 pt-6">
-                    <img class="rounded-circle" src="/img/Introduction.png" alt="">
+                    <img class="rounded-circle" src="./img/Introduction.png" alt="">
 
                   </div>
                     <div class="col-md-7 col-sm-9 ml-7 text-center">
