--- a/project/index.html
+++ b/project/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
-        <link rel="stylesheet" href="/css/class.css">
+        <link rel="stylesheet" href="./css/class.css">
 
 
         <link rel="stylesheet" href="./css/bootstrap.min.css" />
