--- a/project/index.html
+++ b/project/index.html
@@ -120,7 +120,7 @@
                         title="Preview"
                         ><i class="ion ion-eye"></i
                       ></a>
-                      <a href="/tku/W01/intro.html" class="link-details" title="More Details"
+                      <a href="./tku/W01/intro.html" class="link-details" title="More Details"
                         ><i class="ion ion-android-open"></i
                       ></a>
                     </figure>
@@ -152,7 +152,7 @@
                         title="Preview"
                         ><i class="ion ion-eye"></i
                       ></a>
-                      <a href="/tku/W01/pokemon.html" class="link-details" title="More Details"
+                      <a href="./tku/W01/pokemon.html" class="link-details" title="More Details"
                         ><i class="ion ion-android-open"></i
                       ></a>
                     </figure>
@@ -184,7 +184,7 @@
                         title="Preview"
                         ><i class="ion ion-eye"></i
                       ></a>
-                      <a href="/tku/W02/blog.html" class="link-details" title="More Details"
+                      <a href="./tku/W02/blog.html" class="link-details" title="More Details"
                         ><i class="ion ion-android-open"></i
                       ></a>
                     </figure>
@@ -213,7 +213,7 @@
                         title="Preview"
                         ><i class="ion ion-eye"></i
                       ></a>
-                      <a href="/tku/W02/imageGallery.html" class="link-details" title="More Details"
+                      <a href="./tku/W02/imageGallery.html" class="link-details" title="More Details"
                         ><i class="ion ion-android-open"></i
                       ></a>
                     </figure>
@@ -245,7 +245,7 @@
                         title="Preview"
                         ><i class="ion ion-eye"></i
                       ></a>
-                      <a href="/tku/W03/div.html" class="link-details" title="More Details"
+                      <a href="./tku/W03/div.html" class="link-details" title="More Details"
                         ><i class="ion ion-android-open"></i
                       ></a>
                     </figure>
@@ -277,7 +277,7 @@
                         title="Preview"
                         ><i class="ion ion-eye"></i
                       ></a>
-                      <a href="/tku/W04/w04/tku60.html" class="link-details" title="More Details"
+                      <a href="./tku/W04/w04/tku60.html" class="link-details" title="More Details"
                         ><i class="ion ion-android-open"></i
                       ></a>
                     </figure>
@@ -306,7 +306,7 @@
                         title="Preview"
                         ><i class="ion ion-eye"></i
                       ></a>
-                      <a href="/tku/W04/nav.html" class="link-details" title="More Details"
+                      <a href="./tku/W04/nav.html" class="link-details" title="More Details"
                         ><i class="ion ion-android-open"></i
                       ></a>
                     </figure>
@@ -338,7 +338,7 @@
                         title="Preview"
                         ><i class="ion ion-eye"></i
                       ></a>
-                      <a href="/tku/W05/nav.html" class="link-details" title="More Details"
+                      <a href="./tku/W05/nav.html" class="link-details" title="More Details"
                         ><i class="ion ion-android-open"></i
                       ></a>
                     </figure>
@@ -370,7 +370,7 @@
                         title="Preview"
                         ><i class="ion ion-eye"></i
                       ></a>
-                      <a href="/tku/W06/index.html" class="link-details" title="More Details"
+                      <a href="./tku/W06/index.html" class="link-details" title="More Details"
                         ><i class="ion ion-android-open"></i
                       ></a>
                     </figure>
@@ -403,7 +403,7 @@
                         ><i class="ion ion-eye"></i
                       ></a>
                       <a
-                        href="/tku/W08/index.html"
+                        href="./tku/W08/index.html"
                         class="link-details"
                         title="More Details"
                         ><i class="ion ion-android-open"></i
@@ -438,7 +438,7 @@
                         ><i class="ion ion-eye"></i
                       ></a>
                       <a
-                        href="/tku/w09_calculator/calc_id.html"
+                        href="./tku/w09_calculator/calc_id.html"
                         class="link-details"
                         title="More Details"
                         ><i class="ion ion-android-open"></i
@@ -473,7 +473,7 @@
                         ><i class="ion ion-eye"></i
                       ></a>
                       <a
-                        href="/tku/W11/w11_TicTacToe/tictactoe_id.html"
+                        href="./tku/W11/w11_TicTacToe/tictactoe_id.html"
                         class="link-details"
                         title="More Details"
                         ><i class="ion ion-android-open"></i
@@ -508,7 +508,7 @@
                         ><i class="ion ion-eye"></i
                       ></a>
                       <a
-                        href="/tku/W12/looplab.html"
+                        href="./tku/W12/looplab.html"
                         class="link-details"
                         title="More Details"
                         ><i class="ion ion-android-open"></i
@@ -543,7 +543,7 @@
                         ><i class="ion ion-eye"></i
                       ></a>
                       <a
-                        href="/tku/W13/w12-classdemo/looplab.html"
+                        href="./tku/W13/w12-classdemo/looplab.html"
                         class="link-details"
                         title="More Details"
                         ><i class="ion ion-android-open"></i
@@ -578,7 +578,7 @@
                         ><i class="ion ion-eye"></i
                       ></a>
                       <a
-                        href="/tku/W14/Glozzom demo/index.html"
+                        href="./tku/W14/Glozzom demo/index.html"
                         class="link-details"
                         title="More Details"
                         ><i class="ion ion-android-open"></i
@@ -613,7 +613,7 @@
                         ><i class="ion ion-eye"></i
                       ></a>
                       <a
-                        href="/tku/W15/portfolio.html"
+                        href="./tku/W15/portfolio.html"
                         class="link-details"
                         title="More Details"
                         ><i class="ion ion-android-open"></i
