--- a/project/index.html
+++ b/project/index.html
@@ -599,13 +599,13 @@
                   <div class="portfolio-wrap">
                     <figure>
                       <img
-                        src="/img/hw15.1.PNG"
+                        src="./img/hw15.1.PNG"
                         style="width: 380px;height:300px;"
                         class="img-fluid"
                         alt=""
                       />
                       <a
-                        href="/img/hw15.1.PNG"
+                        href="./img/hw15.1.PNG"
                         class="link-preview"
                         data-lightbox="portfolio"
                         data-title="Demo 2"
